portal: fix horizontal scrolling

--- a/mpcontribs-portal/mpcontribs/portal/assets/css/main.scss
+++ b/mpcontribs-portal/mpcontribs/portal/assets/css/main.scss
@@ -56,8 +56,6 @@ $footer-padding: 0.5rem;
 $footer-background-color: $grey-darker;
 $footer-color: white;
 
-$table-cell-border: 1px solid $old-grey-light;
-
 @import "~bulma/bulma";
 @import "~bulma/sass/utilities/mixins";
 @import "~bulma-tooltip/src/sass/index";
